# repo-analysis-suite

./: .gitignore  CONTRIBUTING.md  README.md
AgentReview/: AGENTS.md  GEMINI.md  Justfile  README.md  agent-review.md  dependency_review_report.md  docker-compose.observability.yml  inspect_fs.py  inspect_mcp.py  langgraph.json  mcp_implementation_comparison.md  pr_body.md  pyproject.toml  test_git_log.py
AgentReview/config/grafana/datasources/: datasources.yaml
AgentReview/docs/: architecture.md  claudeActivity.md
AgentReview/docs/architecture/: agent-factory.md  state-management.md  system-design.md
AgentReview/docs/domains/factory/: fac-overview.md
AgentReview/docs/domains/observability/: obs-overview.md
AgentReview/docs/domains/state/: st-overview.md
AgentReview/docs/guides/: CONFIGURATION.md  GRAPHITE.md  OBSERVABILITY.md  TESTING.md  TROUBLESHOOTING.md
AgentReview/docs/plans/: 2025-12-10-implementation-plan.md  dependency-update-stabilization.md  documentation-generation.md  mcp-architecture-proposal.md  multiagentpanic-comprehensive-review-plan.md  research-gaps.md  testing-infrastructure-plan.md
AgentReview/docs/research/: README.md  context-retrieval-comparison.md  four-agent-critique.md  implementation-methods-research.md  initial-prompt.txt  modal-remote-execution.md
AgentReview/observability/: config.py
AgentReview/prometheus/: config.yml
AgentReview/scripts/: dependency_review.py
AgentReview/src/multiagentpanic/: __main__.py  cli.py  main.py  tools.py
AgentReview/src/multiagentpanic/agents/: __init__.py  core.py  orchestrator.py  prompts.py  (+2 more)
AgentReview/src/state/: models.py
AgentReview/tests/: conftest.py  test_orchestrator_simple.py
AgentReview/tests/dummy_repo/: k8s.yaml
AgentReview/tests/integration/: test_01_e2e_simple_review.py  test_context_fallback_integration.py  test_orchestrator_basic.py  test_orchestrator_integration.py
AgentReview/tests/unit/: test_agent_factory.py  test_cli.py  test_context_fallback.py  test_llm_factory.py  test_mcp_tools.py  test_model_selector.py  test_node_creation.py  test_orchestrator.py  test_state_schemas.py  test_state_type_safety.py  test_subgraph_compilation.py  test_tool_integration.py  test_workflow_agent.py  test_workflow_simple.py
(+100 files in other folders)
